--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
         <hr>
         <h1>Image Showcase</h1>
         <p>Here are some Sample Images:</p>
-        <img src="../Images/download (1).jpeg" alt="Nature"><br><br>
-        <img src="../Images/download (2).jpeg" alt="Nature"><br><br>
-        <img src="../Images/download.jpeg" alt="Nature"><br><br>
-        <img src="../Images/images.jpeg" alt="Nature"><br><br>
+        <img src="Images/download (1).jpeg" alt="Nature"><br><br>
+        <img src="Images/download (2).jpeg" alt="Nature"><br><br>
+        <img src="Images/download.jpeg" alt="Nature"><br><br>
+        <img src="Images/images.jpeg" alt="Nature"><br><br>
         <button><a href="#top">Go To Top</a></button>
     </body>
 </html>
